--- a/yoga/src/components/layout/MenuMobile/ButtonMobile.module.css
+++ b/yoga/src/components/layout/MenuMobile/ButtonMobile.module.css
@@ -1,12 +1,13 @@
 .mobile__btn{
-    width: 100%;
-    height: 100%;
+    width: 6rem;
+    margin: 1rem;
     border: none;
-    margin-left: 10rem;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
 .logo_menu_mobile{
-    width: 60px;
+    width: 3.3rem;
 }
