--- a/yoga/src/components/layout/MenuSection/Navbar.module.css
+++ b/yoga/src/components/layout/MenuSection/Navbar.module.css
@@ -10,7 +10,13 @@
     background-color: transparent;
     z-index: 3;
     position: fixed;
-    background-color: rgb(242, 240, 237);
+    background-color: rgba(242, 240, 237, 0.676);
+}
+
+.menu__section:hover{
+    background-color: rgba(242, 240, 237, 0.905);
+    cursor: pointer;
+    transition: 0.4s;
 }
 
 .navbar{
@@ -41,7 +47,7 @@
 
 .item a{
     text-decoration:none;
-    color:rgb(105, 103, 103);
+    color:rgb(0, 0, 0);
     letter-spacing: 1px;
     margin-left: 1.2rem;  
     transition: 0.7s;
@@ -146,50 +152,12 @@
     display: none;
 }
 
-
-@media (min-width: 320px) and (max-width: 600px){
-
-    .menu__section{
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items:  center ;
-    }
-
-    .navbar{
-        display: none;
-    }
-
-    .section__mobile__div{
-        display: flex;
-        justify-content: space-evenly;
-        width: 100%;
-        margin: 1rem;
-        background-color: transparent;
-    
-    }
-
-    .section__mobile__div:hover{
-
-        background-color: transparent;
-    
-    }
-
-    .txt__home{
-        display: none;
-    }
-
-    .logo__mobile{
-        display: none;
-        
-    }
-
-
-
+.section__mobile__logo_menu{
+    display: none;
 }
 
-@media (min-width: 320px) and (max-width: 600px) {
+
+@media (min-width: 320px) and (max-width: 700px) {
 
 
     .navbar {
@@ -213,44 +181,20 @@
         }
       
 
-     .menu__section{
-       display: flex;
-       justify-content: space-between;
-       background-color: rgb(240, 233, 233);
-       align-items: center;
-       text-align: center;
-       width: 100%;
-       height: 15vh;
+
+      .txt__home{
+        display: none;
       }
 
-
-      .section__mobile__div{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-        
+      .section__mobile__logo_menu{
+        display: contents;
       }
+    
+      .menu__section:hover{
+        background-color: transparent;
+        cursor: pointer;
+        transition: 0.4s;
+    }
 
-      .logo__mobile{
-        border-radius: 60px;
-        width: 16rem;
-        height: 6rem;
-        border-radius: 100px;
-        padding: 1rem;
-        background-color: rgba(143, 134, 36, 0.756);
-        animation: myAnim_logobanner 3s ease 0s 1 normal forwards;
-        margin-left: 1rem;
-    }
-    
-    @keyframes myAnim_logobanner {
-        0% {
-            opacity: 0;
-        }
-    
-        100% {
-            opacity: 1;
-        }
-    }
 
 }
