--- a/yoga/src/App.css
+++ b/yoga/src/App.css
@@ -25,6 +25,13 @@ html{
   height: 100vh;
 }
 
+h1{
+  color: white;
+    font-size: 2.7rem;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    margin: 3rem;
+}
 
 
 @media screen and (min-width:320px) and (max-width:560px){
