--- a/yoga/src/components/pages/AboutSection/Yoga.module.css
+++ b/yoga/src/components/pages/AboutSection/Yoga.module.css
@@ -3,3 +3,9 @@
     height: 100vh;
     background-color: rgba(217, 213, 209, 0.897);
 }
+
+.yoga__banner{
+    width: 100%;
+    height: 70vh;
+    
+}
