--- a/yoga/src/components/pages/HomeSection/HomeOne.module.css
+++ b/yoga/src/components/pages/HomeSection/HomeOne.module.css
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     filter: grayscale(0.3);
-    animation: myAnim_bannerhome 5s ease-in-out 0s 1 normal forwards;
+    animation: myAnim_bannerhomehome 10s ease-in-out 0s 1 normal forwards;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,7 +19,7 @@
 
 	100% {
 		background-position: right center;
-		background-size: 120%;
+		background-size: 150%;
 	}
 
 }
