--- a/yoga/src/components/pages/DormSection/ImageCarouselDorm.module.css
+++ b/yoga/src/components/pages/DormSection/ImageCarouselDorm.module.css
@@ -1,18 +1,24 @@
-.carousel__image img{
-    border-radius: 35px;
-    height: 460px;
+.carousel__image_dorm img{
+    border-radius:205px;
+    height: 400px;
     border: 2px solid rgb(181, 172, 14);
     padding: 1rem;
+    display: flex;
+    align-items: center;
 }
 
-
-.carousel__image button{
-    position: absolute;
-    top: 24rem;
-    left: 14rem;
-    font-size: 0.6rem;
+.btn_change_dorm{
+    background-color: rgb(66, 45, 17);
     color:white;
-    background-color: rgba(8, 8, 7, 0.448);
+    width: 4rem;
+}
+
+.btn_change_dorm:hover{
+    background-color: rgb(138, 81, 8);
+    width: 4rem;
+}
+.carousel__image_dorm button{
+   
 }
 
 
