--- a/yoga/src/components/pages/TrindadeSection/TrindadeBeach.module.css
+++ b/yoga/src/components/pages/TrindadeSection/TrindadeBeach.module.css
@@ -1,15 +1,19 @@
 .trindade_beach_container{
-    background-color: rgba(236, 236, 236, 0.39);
+    background-color: rgb(255, 255, 255);
     width: 100%;
     height: 100vh;
+
+}
+
+.trindade_beach_container h2{
+    padding-top:2rem;
+
 }
 
 .trindade_beach{
-    width: 60%;
-    height: 40vh;
-    background-color: rgb(168, 168, 168);
+    width: 100%;
+    padding:2rem;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
