--- a/yoga/src/components/pages/TrindadeSection/TrindadeHistory.module.css
+++ b/yoga/src/components/pages/TrindadeSection/TrindadeHistory.module.css
@@ -1,7 +1,7 @@
 .trindade_history__container{
     width: 100%;
-    height: 100vh;
-    background-color: rgb(234, 230, 223);
+    height: 70vh;
+    background-color: rgb(255, 255, 255);
     padding: 2rem;
     display: flex;
     justify-content: center;
@@ -22,6 +22,13 @@
 
 }
 
+.trindade__container_um{
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .history__container h2{
     width: 100%;
     font-size: 2rem;
@@ -32,11 +39,15 @@
 
 .history__container p{
     width: 150%;
-    font-size: 1rem;
+    height: 100%;
+    padding:0rem;
+    font-size: 0.9rem;
     color:rgb(0, 0, 0);
     letter-spacing: 1px;
     line-height: 1.6rem;
     font-weight: 400;
+    border: 1px solid white;
+    border-radius: 15px;
 }
 
 
@@ -48,7 +59,26 @@
     display: flex;
     align-items: center;
     justify-content: start;
+    flex-direction: column;
     border-radius: 15px;
     margin-left: 1rem;
     padding:1rem;
+}
+
+.curiosity__container h2{
+    margin-bottom: 3rem;
+    color: white;
+    font-size: 3rem;
+    border: 1px solid white;
+    border-radius: 15px;
+    width: 40%;
+}
+
+.curiosity__container p{
+    width: 100%;
+    font-size: 1rem;
+    color:rgb(0, 0, 0);
+    letter-spacing: 1px;
+    line-height: 1.6rem;
+    font-weight: 400;
 }
